<resources>
    <string name="app_name" translatable="false">ContactsApp</string>
    <string name="fab_add_description_button_add">button add</string>
    <string name="toolbar_search_hint">"Type name, email or phone number…"</string>
    <string name="menu_item_search_title">Search</string>
    <string name="item_contact_iv_description">image</string>

    <string name="detail_description_avatar">avatar</string>
    <string name="detail_hint_enter_name">Name</string>
    <string name="detail_hint_enter_phone_number">Phone number</string>
    <string name="detail_hint_enter_email">Email</string>
    <string name="detail_hint_enter_birth_date">Date of birth</string>
    <string name="detail_button_add_text">Add</string>
    <string name="detail_button_save_changes_text">Save changes</string>
    <string name="detail_tv_add_image_text">ADD IMAGE</string>
    <string name="detail_tv_change_image_text">CHANGE IMAGE</string>
    <string name="image_arrow">image arrow</string>

    <plurals name="search_result_plurals">
        <item quantity="one">%s contact found</item>
        <item quantity="other">%s contacts found</item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_icon">settings icon</string>
    <string name="splash_image">splash image</string>
    <string name="settings">Settings</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_guide">Guide</string>
    <string name="settings_feedback">Feedback</string>
    <string name="channel_name">CHANNEL_FCM</string>
    <string name="channel_desc">notification channel</string>


</resources>