<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.maxrzhe.presentation.viewmodel.impl.ContactDetailViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary"
        android:clickable="true"
        android:focusable="true"
        app:layoutDescription="@xml/fragment_contact_detail_xml_constraintlayout2_scene">

        <ProgressBar
            android:id="@+id/pb_detail"
            toggleVisibility="@{viewModel.isLoading}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/iv_avatar"
            imageUri="@{viewModel.image}"
            android:layout_width="@dimen/detail_iv_avatar_width"
            android:layout_height="@dimen/detail_iv_avatar_height"
            android:layout_marginTop="@dimen/detail_iv_avatar_marginTop"
            android:contentDescription="@string/detail_description_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/person_placeholder" />

        <TextView
            android:id="@+id/tv_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_tv_avatarImage_marginTop"
            android:fontFamily="@font/roboto_light"
            android:text="@{viewModel.imageTextRes}"
            android:textColor="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

        <ImageView
            android:id="@+id/iv_fav"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:onClick="@{viewModel::onChangeFavorite}"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/sv_detail"
            toggleVisibility="@{!viewModel.isLoading}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_image">

            <LinearLayout
                android:id="@+id/ll_detail_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_ll_edit_marginStart"
                android:layout_marginTop="@dimen/detail_ll_edit_marginTop"
                android:layout_marginEnd="@dimen/detail_ll_edit_marginEnd"
                android:orientation="vertical"
                android:padding="@dimen/detail_ll_edit_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alegreya_sans_sc"
                        android:hint="@string/detail_hint_enter_name"
                        android:inputType="text"
                        android:text="@={viewModel.name}"
                        android:textSize="@dimen/detail_et_name_textSize"
                        android:textStyle="bold"
                        android:theme="@style/EditText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_phone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/detail_hint_enter_phone_number"
                        android:inputType="phone"
                        android:text="@={viewModel.phone}"
                        android:textSize="@dimen/detail_et_phone_textSize"
                        android:theme="@style/EditText" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.motion.widget.MotionLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutDescription="@xml/fragment_contact_detail_xml_constraintlayout3_scene">

                    <TextView
                        android:id="@+id/tv_birth_date"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/detail_hint_enter_birth_date"
                        android:padding="8dp"
                        android:text="@{viewModel.date}"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="@dimen/detail_et_phone_textSize" />

                    <ImageButton
                        android:id="@+id/ivb_arrow"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/image_arrow"
                        android:src="@drawable/ic_baseline_arrow_drop_down_24"
                        android:tint="#666666"
                        app:layout_constraintBottom_toBottomOf="@id/tv_birth_date"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_birth_date"
                        app:layout_constraintTop_toTopOf="@id/tv_birth_date" />

                    <View
                        android:id="@+id/v_divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/purple_500"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_birth_date" />

                    <DatePicker
                        android:id="@+id/dp_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner"
                        android:day="@={viewModel.day}"
                        android:month="@={viewModel.month}"
                        android:onDateChanged="@{(v, year, month, day) -> viewModel.onDateChanged(year, month, day)}"
                        android:overScrollMode="always"
                        android:year="@={viewModel.year}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/v_divider" />
                </androidx.constraintlayout.motion.widget.MotionLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintTextAppearance="@style/HintText"
                    app:hintTextColor="@color/purple_700">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/detail_hint_enter_email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}"
                        android:textSize="@dimen/detail_et_email_textSize"
                        android:theme="@style/EditText" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_details_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/detail_btn_add_marginStart"
                    android:layout_marginTop="@dimen/detail_btn_add_marginTop"
                    android:layout_marginEnd="@dimen/detail_btn_add_marginEnd"
                    android:layout_marginBottom="@dimen/detail_btn_add_marginBottom"
                    android:onClick="@{() -> viewModel.addOrUpdate()}"
                    android:padding="@dimen/detail_btn_add_padding"
                    android:text="@{viewModel.buttonTextRes}"
                    android:textSize="@dimen/detail_btn_add_textSize"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>